--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
 
     
 
@@ -164,18 +164,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-28" style="background-color: rgb(184, 49, 47); padding-top: 20px; padding-bottom: 20px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2">**$50 consultation fee for the intial session.**</h3>
-                <small class="mbr-section-subtitle">This fee will be added towards payment for the chosen website package, if Sling services are chosen.</small>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="mbr-section mbr-parallax-background" id="form1-d" style="background-image: url(assets/images/pexels-photo-2000x1333.png); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="form1-2l" style="background-image: url(assets/images/pexels-photo-2000x1333.png); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -195,48 +184,59 @@
 
 
                     <div data-form-alert="true">
-                        <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form! Get ready to slay giants! </div>
+                        <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">anks for filling out the form! Get ready to slay some giants! </div>
                     </div>
 
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="XyOOqbHpGzn91j/uVF+ndZ+N7YqV2phMaH2PvHu6TxnkHdSa4IN6lE6KKM8dR/SZ3IRQlzerl0+MgbXugLWf1MiP+ydnazQrSxoQ2qs1nr+Zm6GoPguYl/0JsnHxJH7X" data-form-email="true">
+                        <input type="hidden" value="Alfx0Usm/IFiYXko1dA6SKQdtxUrfxoWZjqr4Vir0q9kjcYUzADCplWYUVzF/wc5H3RQwjdQSIbZZqwQGib31CU8BrotaRNMKqIUCHhvH7kGacPSDTH8BfydamJi4VSe" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
                             <div class="col-xs-12 col-md-4">
                                 <div class="form-group">
-                                    <label class="form-control-label" for="form1-d-name">Name<span class="form-asterisk">*</span></label>
-                                    <input type="text" class="form-control" name="name" required="" data-form-field="Name" id="form1-d-name">
+                                    <label class="form-control-label" for="form1-2l-name">Name<span class="form-asterisk">*</span></label>
+                                    <input type="text" class="form-control" name="name" required="" data-form-field="Name" id="form1-2l-name">
                                 </div>
                             </div>
 
                             <div class="col-xs-12 col-md-4">
                                 <div class="form-group">
-                                    <label class="form-control-label" for="form1-d-email">Email<span class="form-asterisk">*</span></label>
-                                    <input type="email" class="form-control" name="email" required="" data-form-field="Email" id="form1-d-email">
+                                    <label class="form-control-label" for="form1-2l-email">Email<span class="form-asterisk">*</span></label>
+                                    <input type="email" class="form-control" name="email" required="" data-form-field="Email" id="form1-2l-email">
                                 </div>
                             </div>
 
                             <div class="col-xs-12 col-md-4">
                                 <div class="form-group">
-                                    <label class="form-control-label" for="form1-d-phone">Phone</label>
-                                    <input type="tel" class="form-control" name="phone" data-form-field="Phone" id="form1-d-phone">
+                                    <label class="form-control-label" for="form1-2l-phone">Phone</label>
+                                    <input type="tel" class="form-control" name="phone" data-form-field="Phone" id="form1-2l-phone">
                                 </div>
                             </div>
 
                         </div>
 
                         <div class="form-group">
-                            <label class="form-control-label" for="form1-d-message">Message</label>
-                            <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-d-message"></textarea>
+                            <label class="form-control-label" for="form1-2l-message"></label>
+                            <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-2l-message"></textarea>
                         </div>
 
-                        <div><button type="submit" class="btn btn-warning">LET'S SLAY!</button></div>
+                        <div><button type="submit" class="btn btn-warning">LET'S SLAY!&nbsp;</button></div>
 
                     </form>
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section mbr-section__container article" id="header3-28" style="background-color: rgb(184, 49, 47); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">**$50 consultation fee for the intial session.**</h3>
+                <small class="mbr-section-subtitle">This fee will be added towards payment for the chosen website package, if Sling services are chosen.</small>
             </div>
         </div>
     </div>
