--- a/page6.html
+++ b/page6.html
@@ -57,7 +57,74 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1v" data-bg-video="https://www.youtube.com/embed/78LhiNGz-tE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="form1-2n" style="background-image: url(assets/images/pexels-photo-2000x1333-2.png); padding-top: 120px; padding-bottom: 120px;">
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
+    </div>
+    <div class="mbr-section mbr-section__container mbr-section__container--middle">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-xs-center">
+                    <h3 class="mbr-section-title display-2">CONTACT FORM</h3>
+                    <small class="mbr-section-subtitle">Come slay some giants with us!&nbsp;</small>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mbr-section mbr-section-nopadding">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
+
+
+                    <div data-form-alert="true">
+                        <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">anks for filling out the form! Get ready to slay some giants! </div>
+                    </div>
+
+
+                    <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
+
+                        <input type="hidden" value="KQMx/I+Q6vnP5yRQpQbn7jK2IsWvCCZtUqZFQn28fF8Ou7kKWfsmvsxWgrG8KdDUteGMyNWd1RCdXiwlWvH4Uzw6aGAGGcjzSqhpmoVdxV4CXek7ITP6dX3kWJrQbGn8" data-form-email="true">
+
+                        <div class="row row-sm-offset">
+
+                            <div class="col-xs-12 col-md-4">
+                                <div class="form-group">
+                                    <label class="form-control-label" for="form1-2n-name">Name<span class="form-asterisk">*</span></label>
+                                    <input type="text" class="form-control" name="name" required="" data-form-field="Name" id="form1-2n-name">
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-md-4">
+                                <div class="form-group">
+                                    <label class="form-control-label" for="form1-2n-email">Email<span class="form-asterisk">*</span></label>
+                                    <input type="email" class="form-control" name="email" required="" data-form-field="Email" id="form1-2n-email">
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-md-4">
+                                <div class="form-group">
+                                    <label class="form-control-label" for="form1-2n-phone">Phone</label>
+                                    <input type="tel" class="form-control" name="phone" data-form-field="Phone" id="form1-2n-phone">
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="form-group">
+                            <label class="form-control-label" for="form1-2n-message"></label>
+                            <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-2n-message"></textarea>
+                        </div>
+
+                        <div><button type="submit" class="btn btn-warning">LET'S SLAY!&nbsp;</button></div>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section article" id="msg-box8-1v" data-bg-video="https://www.youtube.com/embed/78LhiNGz-tE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -174,73 +241,6 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="form1-1z" style="background-image: url(assets/images/pexels-photo-2000x1333.png); padding-top: 120px; padding-bottom: 120px;">
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
-    </div>
-    <div class="mbr-section mbr-section__container mbr-section__container--middle">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 text-xs-center">
-                    <h3 class="mbr-section-title display-2">CONTACT FORM</h3>
-                    <small class="mbr-section-subtitle">Come slay some giants with us!&nbsp;</small>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="mbr-section mbr-section-nopadding">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
-
-
-                    <div data-form-alert="true">
-                        <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form! Get ready to slay giants! </div>
-                    </div>
-
-
-                    <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
-
-                        <input type="hidden" value="3T5YZuhXCPPHyEKmCxqkzikVSJAYNn1H2XhoPUlZfPabPaRMubje5ioEi3aoryUENlFxZplw+XnbXZyzRlbuhM11hJ5nISRvHGuK56MqZPR0qFyBcRxUOncy1HAex5Hn" data-form-email="true">
-
-                        <div class="row row-sm-offset">
-
-                            <div class="col-xs-12 col-md-4">
-                                <div class="form-group">
-                                    <label class="form-control-label" for="form1-1z-name">Name<span class="form-asterisk">*</span></label>
-                                    <input type="text" class="form-control" name="name" required="" data-form-field="Name" id="form1-1z-name">
-                                </div>
-                            </div>
-
-                            <div class="col-xs-12 col-md-4">
-                                <div class="form-group">
-                                    <label class="form-control-label" for="form1-1z-email">Email<span class="form-asterisk">*</span></label>
-                                    <input type="email" class="form-control" name="email" required="" data-form-field="Email" id="form1-1z-email">
-                                </div>
-                            </div>
-
-                            <div class="col-xs-12 col-md-4">
-                                <div class="form-group">
-                                    <label class="form-control-label" for="form1-1z-phone">Phone</label>
-                                    <input type="tel" class="form-control" name="phone" data-form-field="Phone" id="form1-1z-phone">
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <div class="form-group">
-                            <label class="form-control-label" for="form1-1z-message">Message</label>
-                            <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-1z-message"></textarea>
-                        </div>
-
-                        <div><button type="submit" class="btn btn-warning">LET'S SLAY!</button></div>
-
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1u" style="background-color: rgb(255, 243, 0); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
@@ -256,8 +256,8 @@
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
-  <script src="assets/jquery-mb-ytplayer/jquery.mb.ytplayer.min.js"></script>
   <script src="assets/jarallax/jarallax.js"></script>
+  <script src="assets/jquery-mb-ytplayer/jquery.mb.ytplayer.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
